--- a/roll/templates/add_record.html
+++ b/roll/templates/add_record.html
@@ -27,6 +27,10 @@
                     <input type="text" id="part_no" name="part_no" class="form-control" placeholder="Enter Part Number">
                 </div>
                 <div class="mb-3">
+                    <label for="village" class="form-label">Village</label>
+                    <input type="text" id="village" name="village" class="form-control" placeholder="Enter Village Name">
+                </div>
+                <div class="mb-3">
                     <label for="sec_no" class="form-label">Section Number</label>
                     <input type="text" id="sec_no" name="sec_no" class="form-control" placeholder="Enter Section Number">
                 </div>
@@ -63,8 +67,12 @@
                     <input type="text" id="rel_type" name="rel_type" class="form-control" placeholder="Enter Relative Type">
                 </div>
                 <div class="mb-3">
-                    <label for="address" class="form-label">Address</label>
-                    <textarea id="address" name="address" class="form-control" placeholder="Enter Address"></textarea>
+                    <label for="religion" class="form-label">Religion</label>
+                    <input type="text" id="religion" name="religion" class="form-control" placeholder="Enter Religion">
+                </div>
+                <div class="mb-3">
+                    <label for="caste" class="form-label">Caste</label>
+                    <input type="text" id="caste" name="caste" class="form-control" placeholder="Enter Caste">
                 </div>
             </div>
             <div class="col-md-6" style="border: 1px groove #ccc; padding: 15px;border-radius: 5px;">
@@ -87,6 +95,10 @@
                 <div class="mb-3">
                     <label for="mob_no" class="form-label">Mobile No</label>
                     <input type="text" id="mob_no" name="mob_no" class="form-control" placeholder="Enter Mobile No">
+                </div>
+                <div class="mb-3">
+                    <label for="address" class="form-label">Address</label>
+                    <textarea id="address" name="address" class="form-control" placeholder="Enter Address"></textarea>
                 </div>
             </div>
         </div>
