Updated changes in roll/views.py

--- a/roll/templates/edit_record.html
+++ b/roll/templates/edit_record.html
@@ -92,7 +92,7 @@
                 </div>
                 <div class="mb-3">
                     <label for="address" class="form-label">Address</label>
-                    <textarea id="address" name="address" class="form-control" value="{{ record.address }}"></textarea>
+                    <input type="text" id="address" name="address" class="form-control" value="{{ record.address }}">
                 </div>
             </div>
         </div>
